...
                enabled = enabled,
                modifier = Modifier
                    .align(Alignment.CenterEnd)
                    .padding(end = 4.dp)
            ) {
                Text(
                    "임시 저장",
                    color = Color(0xFF2F5539),
                    fontSize = 13.sp
                )
            }
        }
    }
...
